# ailab

./: .gitattributes  [dap-terminal] file  pyproject.toml
data/: val_encoded_thucnews_data.csv
src/: gen_data.py
src/bert_learn/: chinese-bert-wwm.py  data.csv  data_load.py  seqcls.py  train_custom_bert.py
src/bert_learn/chinese-bert-wwm/: config.json  model.safetensors
