[project]
authors = [{name = "Abyteon", email = "bai.tn@icloud.com"}]
dependencies = []
name = "bert.learn"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
bert_learn = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
datasets = ">=3.6.0,<4"
transformers = ">=4.53.0,<5"
pytorch = ">=2.7.1,<3"
scikit-learn = ">=1.7.0,<2"
